# TimerApp

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  main.c  toolchain.cmake
GpioController/: GpioController.c  GpioController.h
LedSimulation/: LedSimulation.c  LedSimulation.h
appTimer/: appTimer.c  appTimer.h
build_gcc/: CMakeLists.txt
build_rpi/: CMakeLists.txt
